--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,8 +18,10 @@ jobs:
             use-mamba: true
     
       - name: Update environment
+        shell: bash -l {0}
         run: mamba env update -n openbis2sqlite -f environment.yml
 
       - name: Test with pytest
+        shell: bash -l {0}
         run: |
           pytest
