--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -25,9 +25,7 @@ jobs:
         env:
           ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         run: |
-          mamba install conda-build
-          mamba install conda-verify
-          mamba install anaconda-client
-          mamba config --set anaconda_upload yes
+          mamba install -y conda-build conda-verify anaconda-client
+          conda config --set anaconda_upload yes
           cd $GITHUB_WORKSPACE
           conda-build --no-test --token "$ANACONDA_TOKEN" --user bam77 .conda -m .conda/conda_build_config.yaml
