--- a/.conda/meta.yml
+++ b/.conda/meta.yml
@@ -11,7 +11,7 @@ source:
 
 build:
   skip: True  # [win or osx]
-  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv
+  script: python3 -m pip install . --no-deps --ignore-installed -vv
   number: 0
 
 requirements:
