--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   skip: True  # [win or osx]
-  script: python3 -m pip install . --no-deps --ignore-installed -vv
+  script: {{ PYTHON}} -m pip install . -vv
   number: 0
 
 requirements:
@@ -21,7 +21,8 @@ requirements:
     - setuptools
 
   run:
-    - pgdumplib
+    - python
+    - pgdumplib>=3.1,<4
 
 about:
   home: https://github.com/BAMresearch/openBIS2SQLite
