--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ classifiers = [
 dependencies = [
   "pgdumplib"
 ]
-description = "One of the packages of all time"
+description = "Package for exporting openBIS postgres dumps into sqlite"
 license = {file = "LICENSE"}
 name = "openbis2sqlite"
 readme = "REAMDE.md"
 requires-python = ">=3.10"
-version = "0.0.1"
+version = "0.0.2"
 
 [project.urls]
 repository = "https://github.com/BAMresearch/openBIS2SQLite.git"
