--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -17,7 +17,7 @@ jobs:
           miniforge-variant: Mambaforge
           miniforge-version: latest
           use-mamba: true
-          channels: conda-forge,defaults
+          channels: conda-forge, defaults
           channel-priority: true
 
       - name: Build and upload
@@ -25,7 +25,7 @@ jobs:
         env:
           ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         run: |
-          mamba install -y conda-build conda-verify anaconda-client boa
+          conda install -y conda-build conda-verify anaconda-client boa
           conda config --set anaconda_upload yes
           cd $GITHUB_WORKSPACE
           mamba mambabuild --token "$ANACONDA_TOKEN" --user bam77 .conda -m .conda/conda_build_config.yaml
