--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         run: |
-          conda install -y conda-build conda-verify anaconda-client boa
+          mamba install -y conda-build conda-verify anaconda-client boa
           conda config --set anaconda_upload yes
           cd $GITHUB_WORKSPACE
-          mamba mambabuild --token "$ANACONDA_TOKEN" --user bam77 .conda -m .conda/conda_build_config.yaml
+          mamba mambabuild --token "$ANACONDA_TOKEN" --user bam77 .
